crates/nits-review-core/tests/snapshots/render__empty_to_empty__ignore_ws.snap
---
source: crates/nits-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 0,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": false,
    "additions": 0,
    "deletions": 0,
    "gaps": []
  },
  "rows": []
}
